# cpp_wasm_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  em-build.sh
jsTest/: test.html  test2.html
jslibs/: pkg.js
src/: hello.js  hello.wasm  main.cpp
web/: index.html  symlink  testDemo.js  testDemo.wasm
web/new-directory/: test
